# reasonable-mind

./: .env.example  CHANGELOG.md  CODE_REVIEW.md  CONSTITUTION.md  PR_NOTES.md  README.md  SOUL.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml  pre-pr-checks.yml  tests.yaml
.sisyphus/: boulder.json
.sisyphus/drafts/: agent-soul-review.md
.sisyphus/evidence/: task-1-empty-dirs-removed.txt  task-2-opencode-symlinks.txt  task-3-agent-symlinks.txt  task-4-cline-symlinks.txt  task-5-cursor-symlinks.txt  task-6-kilocode-symlinks.txt  task-7-protools-symlinks.txt
.sisyphus/plans/: skills-consolidation.md
agents/: __init__.py  agent.py  agent_demo.ipynb  extended_thinking_demo.py  extended_thinking_integration.ipynb  logic_foundation_demo.ipynb  neuro_symbolic_demo.py  neuro_symbolic_integration.py  requirements.txt  rigorous_logic_demo.py  rigorous_logic_integration.ipynb  scalability_demo.py  test_message_params.py
agents/core/: __init__.py  adversarial_testing.py  architectural_layer.py  benchmark_suite.py  calibration_system.py  categorical_engine.py  clarification_system.py  config.py  constraint_system.py  critic_system.py  curriculum_system.py  debate_system.py  decision_model.py  evidence_system.py  fallacy_detector.py  feedback_system.py  fuzzy_inference.py  hallucination_mitigation.py  inference_engine.py  latency_control.py  logic_engine.py  logic_orchestrator.py  memory_persistence.py  memory_system.py  multimodal_pipeline.py  observability_system.py  planning_system.py  reranker.py  retrieval_augmentation.py  retrieval_diversity.py  robustness_system.py  role_system.py  rule_engine.py  safety_system.py  self_consistency.py  semantic_parser.py  source_trust.py  telemetry_replay.py  tool_arbitration.py  trace_logger.py  (+2 more)
agents/core_logic/: __init__.py  categorical_engine.py  logic_engine.py
agents/examples/: triadic_synthesis_example.py
agents/governance/: __init__.py  execution_proxy.py  plan_validator.py  process_gate.py  registry.py
agents/governed/: __init__.py  constraint_loader.py  execution_proxy.py  governed_agent.py  persona_lock.py  plan_validator.py
agents/governed/tests/: test_governance.py  test_governed_agent.py
agents/logic/: __init__.py  decision_model.py  epistemic.py  grounding.py  knowledge_base.py  reasoning_agent.py
agents/tests/: conftest.py  test_advanced_enhancements.py  test_architectural_compliance.py  test_architectural_metaphysics.py  test_categorical_engine.py  test_critic_system.py  test_curriculum_observability_role_semantic_clarification.py  test_debate_system.py  test_evidence_system.py  test_fallacy_detector.py  test_governance.py  test_governance_edges.py  test_inference_engine.py  test_logic_engine.py  test_logic_orchestrator.py  test_memory_persistence.py  test_phase2_enhancements.py  test_planning_system.py  test_planning_verification_gate.py  test_reranker.py  test_robustness_system.py  test_rule_engine.py  test_safety_system.py  test_shell_injection_prevention.py  test_uncertainty_system.py
agents/tools/: __init__.py  bash.py  extended_thinking.py  mcp_tool.py  security.py
agents/utils/: connections.py
autonomous-coding/: agent.py  autonomous_agent_demo.py  client.py  prompts.py  security.py
financial-data-analyst/: package-lock.json  package.json
tests/: test_full_coverage_completion.py
tests/logic/: test_categorical_engine.py  test_logic_engine.py
trainer/: index.html  package.json  server.py
trainer/tests/: puppeteer_test.js
