[project]
name = "reasonable-mind"
version = "0.1.0"
description = "Neuro-symbolic reasoning framework with extended thinking capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.75.0",
    "anyio>=4.12.0",
    "attrs>=25.4.0",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",

    "coverage>=7.12.0",
    "cryptography>=46.0.3",
    "distro>=1.9.0",
    "docstring_parser>=0.17.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jiter>=0.12.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "mcp>=1.23.1",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic_core>=2.41.5",
    "Pygments>=2.19.2",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.2.1",

    "referencing>=0.37.0",
    "rpds-py>=0.30.0",
    "sniffio>=1.3.1",

    "typing-inspection>=0.4.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-ra",
    "-q",
    "--cov=agents.governance",
    "--cov=agents.core_logic",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=45",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore ResourceWarning from coverage's sqlite connections
    "ignore:unclosed database:ResourceWarning",
    # Ignore CoverageWarning for modules not imported during tests
    "ignore::coverage.exceptions.CoverageWarning",
]
testpaths = ["agents", "autonomous-coding", "tests"]
norecursedirs = [".venv", "trainer", "node_modules", ".git"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "slow: Slow tests (performance, benchmarks)",
    "security: Security-critical tests",
    "database: Tests requiring database",
]

[tool.coverage.run]
branch = true
source = ["agents/governance", "agents/core_logic"]
omit = ["*/tests/*", "*/__init__.py", "*/.venv/*", "*/test_*.py", "*_test.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501", # Line too long - handled by formatter
    "E741", # Ambiguous variable name - false positives on list comprehension vars
]

[tool.ruff.lint.per-file-ignores]
# Notebooks have cell-based execution with different import patterns
"*.ipynb" = ["E402", "F401", "F541", "F821"]

# Demo files are illustrative, not production code
"*_demo.py" = ["F401", "F541", "F841"]
"**/examples/*.py" = ["F401", "F541", "F841"]

# Test files often import for availability/fixture setup, not direct use
"**/tests/test_*.py" = ["F401", "F841"]
"**/tests/*.py" = ["F401", "F841"]

# Integration notebooks
"*_integration.ipynb" = ["E402", "F401", "F541", "F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
